# financial-manager

./: .commit-msg.txt  .copilot-context.md  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  dq-manifest.yaml  pyproject.toml
.claude/: settings.json
.github/: copilot-instructions.md
.github/workflows/: tax-data-sync.yml
config/: user-config.example.yaml
docs/: change-log.json  import-guide.md  security.md  tax-prep-notes-2025.md
docs/requirements/: business-requirements.md  functional-requirements.md  technical-requirements.md  traceability-matrix.md
docs/research/: README.md
docs/standards/: requirements-standard.md  traceability-standard.md
docs/strategy/: agentic-quality-strategy.md
frontend/: package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx
frontend/src/components/: ChecklistDashboard.tsx  ImportHub.tsx  PipelineDashboard.tsx  ProfileWizard.tsx  TaxForm.tsx  TaxResultDisplay.tsx
frontend/src/hooks/: useTaxCalculator.ts
frontend/src/services/: api.ts  documentApi.ts  importApi.ts  (+1 more)
scripts/: assemble_2025.py  check_open_cl.py  cl_new.py  cl_resolve.py  import_financial_data.py  pipeline.py  sync_tax_data.py  tax_data_overrides.json  validate_change_log.py
src/financial_manager/: __init__.py  config.py  user_config.py
tests/: conftest.py  test_2024_validation.py  test_api.py  test_api_documents.py  test_calculator.py  test_checklist.py  test_cross_validation.py  test_csv_importer.py  test_data_mapper.py  test_deductions.py  test_import_hub.py  test_intake_pipeline.py  test_itemized.py  test_models.py  test_ofx_importer.py  test_pipeline_routes.py  test_profile_and_documents.py  test_scanner.py  test_tax_data.py  test_user_config.py
tests/enforcement/: conftest.py  test_architecture.py  test_code_quality.py  test_code_traceability.py  test_configuration_integrity.py  test_data_integrity.py  test_documentation_quality.py  test_naming_conventions.py  test_pipeline_integrity.py  test_security.py  test_test_quality.py  test_traceability.py
(+34 files in other folders)
