[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-manager"
version = "0.1.0"
description = "US Federal Tax Calculator — modern web-based financial manager."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Chris Catanese"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "pre-commit>=3.5",
]

[tool.setuptools.packages.find]
where = ["src"]

# ── Ruff ─────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "scripts"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "D", "UP", "B", "SIM", "T20", "LOG", "G", "RUF"]
ignore = ["D100", "D104"]

[tool.ruff.lint.per-file-ignores]
"notebooks/**" = ["T20"]
"scratch/**" = ["T20"]
"sandbox/**" = ["T20"]
"tests/**" = ["T20"]
"scripts/**" = ["T20"]

[tool.ruff.lint.pydocstyle]
convention = "google"

# ── Mypy ─────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["uvicorn.*"]
ignore_missing_imports = true

# ── Pytest ───────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
